test/corpus/interval-workouts.txt
===
Interval
===
5x(0.25 miles + 1 min recovery)
---
(workout
  (intervalBlocks
    (intervalBlock
      (number)
      (intervalStep
        (workoutStep
          (distanceGoal
            (number)
            (miles))))
      (intervalStep
        (workoutStep
          (durationGoal
            (number)
            (minutes)))
        (recovery)))))
===
Interval with pace
===
5x(0.25 miles @ 6:30/mi + 0.75 miles @ 9:00/mi)
---
(workout
  intervalBlocks: (intervalBlocks
    (intervalBlock
      iterations: (number)
      intervalStep: (intervalStep
        (workoutStep
          (distanceGoal
            quantity: (number)
            unit: (miles))
          (alert
            (paceThresholdAlert
                (pace
                  duration: (paceTime)
                  distance: (miles))))))
      intervalStep: (intervalStep
        (workoutStep
          (distanceGoal
            quantity: (number)
            unit: (miles))
          (alert
            (paceThresholdAlert
              (pace
                duration: (paceTime)
                distance: (miles)))))))))
===
Interval with heart rate zone
===
5x(0.25 miles @ z5 + 0.75 miles recovery)
---
(workout
  (intervalBlocks
    (intervalBlock
      (number)
      (intervalStep
        (workoutStep
          (distanceGoal
            (number)
            (miles))
          (alert
            (heartRateAlert
              (z5)))))
      (intervalStep
        (workoutStep
          (distanceGoal
            (number)
            (miles)))
          (recovery)))))
===
Interval with warmup
===
1 mile warmup + 5x(100m @ z5 + 2 min recovery) 
---
(workout
  (workoutStep
    (distanceGoal
      (number)
      (miles)))
  (intervalBlocks
    (intervalBlock
      (number)
      (intervalStep
        (workoutStep
          (distanceGoal
            (number)
            (meter))
          (alert
            (heartRateAlert
              (z5)))))
      (intervalStep
        (workoutStep
          (durationGoal
            (number)
            (minutes)))
          (recovery)))))
===
Interval with cooldown
===
5x(100m @ 6:00/mi + 2 min recovery)  + 1 mile cooldown
---
(workout
  (intervalBlocks
    (intervalBlock
      (number)
      (intervalStep
        (workoutStep
          (distanceGoal
            (number)
            (meter))
          (alert
            (paceThresholdAlert
              (pace
                (paceTime)
                (miles))))))
      (intervalStep
        (workoutStep
          (durationGoal
            (number)
            (minutes)))
          (recovery))))
  (workoutStep
    (distanceGoal
      (number)
      (miles))))
===
Interval step with warmup and cooldown
===
1 mile warmup + 5x(1 mile + 1 mile recovery)  + 2 miles cooldown
---
(workout
  (workoutStep
    (distanceGoal
      (number)
      (miles)))
  (intervalBlocks
    (intervalBlock
      (number)
      (intervalStep
        (workoutStep
          (distanceGoal
            (number)
            (miles))))
      (intervalStep
        (workoutStep
          (distanceGoal
            (number)
            (miles)))
          (recovery))))
  (workoutStep
    (distanceGoal
      (number)
      (miles))))

===
Interval with multiple steps and warmup and cooldown
===
1 mile @ z2 warmup + 5 miles + 4 miles recovery + 3x(2 miles) + 5x(1 mile + 1 mile recovery) + 2 miles cooldown
---
(workout
  warmup: (workoutStep
    (distanceGoal
      quantity: (number)
      unit: (miles))
    (alert
      (heartRateAlert
        (z2))))
  intervalBlocks: (intervalBlocks
    (intervalBlock
      intervalStep: (intervalStep
        (workoutStep
          (distanceGoal
            quantity: (number)
            unit: (miles)))))
    (intervalBlock
      intervalStep: (intervalStep
        (workoutStep
          (distanceGoal
            quantity: (number)
            unit: (miles)))
        purpose: (recovery)))
    (intervalBlock
      iterations: (number)
      intervalStep: (intervalStep
        (workoutStep
          (distanceGoal
            quantity: (number)
            unit: (miles)))))
    (intervalBlock
      iterations: (number)
      intervalStep: (intervalStep
        (workoutStep
          (distanceGoal
            quantity: (number)
            unit: (miles))))
      intervalStep: (intervalStep
        (workoutStep
          (distanceGoal
            quantity: (number)
            unit: (miles)))
        purpose: (recovery))))
  cooldown: (workoutStep
    (distanceGoal
      quantity: (number)
      unit: (miles))))
